tests/expectations/compiler/tuple/tuple_not_allowed_fail.out
Error [ETYC0372050]: A struct cannot contain a tuple.
    --> compiler-test:22:5
     |
  22 |     mem: (u8, u16)
     |     ^^^
Error [ETYC0372051]: A function cannot take in a tuple as input.
    --> compiler-test:8:8
     |
   8 | fn foo(a: (u8, u16)) -> (u8, u16) {
     |        ^^^^^^^^^^^^
Error [ETYC0372049]: A tuple type cannot contain a tuple.
    --> compiler-test:12:26
     |
  12 | fn bar(zz: bool) -> (u8, (u16, u32)) {
     |                          ^^^^^^^^^^
Error [ETYC0372052]: A tuple expression cannot contain another tuple expression.
    --> compiler-test:13:18
     |
  13 |     return (1u8, (2u16, 3u32));
     |                  ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `(u8, u16)` was found.
    --> compiler-test:17:9
     |
  17 |     for i: (u8, u16) in 0u8..2u8 {}
     |         ^
Error [ETYC0372117]: Expected type `(u8, u16)` but type `u8` was found.
    --> compiler-test:17:25
     |
  17 |     for i: (u8, u16) in 0u8..2u8 {}
     |                         ^^^
Error [ETYC0372117]: Expected type `(u8, u16)` but type `u8` was found.
    --> compiler-test:17:30
     |
  17 |     for i: (u8, u16) in 0u8..2u8 {}
     |                              ^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
